Fixed alignment issue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -372,7 +372,6 @@ img {
     img {
         max-width: 200px;
         border-radius: 200px;
-        margin-bottom: 50px;
         @media screen and (min-width: 992px) {
             max-width: 100px;
             border-radius: 100px;
